<resources>
    <string name="app_name">Road Companion</string>

    <string name="kk_master_item_list">Master Item List</string>
    <string name="kk_list_items">List Items</string>
    <string name="kk_add_item">Add Item</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="chooseLocation">Select Location</string>
    <string name="admin">Administration</string>
    <string name="reset">Reset</string>
    <string name="kk_address1_hint">Address1</string>
    <string name="kk_name_hint">Name</string>
    <string name="kk_address2_hint">Address2</string>
    <string name="kk_email_hint">Email</string>
    <string name="kk_mobile_hint">Mobile</string>
    <string name="kk_password_hint">Password</string>
    <string name="kk_reenter_password_hint">Reenter Password</string>
    <string name="kk_city_hint">City</string>
    <string name="kk_state_hint">State</string>
    <string name="kk_cancel_button">Cancel</string>
    <string name="kk_register_button">Register</string>
    <string name="kk_text_location_advice">Please select the button below if you are currently in your home. Your home location helps us in delivering things easily. If you are not currently at home, don\'t select it. You can choose location later. \nअगर आप अभी अपने पते पर हैं तो कृपया नीचे दिए बटन को सेलेक्ट करें। आपके सही स्थान से हमें सामान पहुंचाने में आसानी होती है। अगर अभी आप अपने पते पर नहीं हैं तो कृपया इसे छोड़ दें। जब आप अपने पते पर पहुंचे तो आप अपने स्थान को सेलेक्ट कर सकते हैं। </string>
    <string name="photo">Photo</string>
    <string name="barcodeWillAppearHere">Bar code value will appear hear</string>
    <string name="measurement_category">Measurement Category</string>
    <string name="kk_measurement_category_addition_failed">Measurement Category Addition Failed</string>
    <string name="kk_add_measurement_category">Add Unit Category</string>
    <string name="primaryUnit">Primary Unit</string>
    <string name="unit">Unit</string>
    <string name="kk_add_unit">Add Unit</string>
    <string name="kk_factor">1.0</string>
    <string name="fractional">Fractional</string>
    <string name="kk_measurement_unit_addition_failed">Measurement Unit Additional Failed</string>
    <string name="kk_add_measurement_unit">Add Unit</string>
    <string name="unit_activity_label">KhanaKiranaUnitActivity</string>
    <string name="category_activity_label">KhanaKiranaCategoryActivity</string>
    <string name="acronym">Acronym</string>
    <string name="measurement_category_dialog_title">Add Unit Category</string>
    <string name="unit_dialog_title">Add Unit</string>
    <string name="add_item_to_master_list">Add to Master List</string>
    <string name="item_title">Item Title</string>
    <string name="item_description">Please enter item description</string>
    <string name="kk_add_master_item">Add Item</string>
    <string name="kk_master_item_addition_failed">Master Item %s additional failed</string>
    <string name="item_category_activity_label">Item Category</string>
    <string name="item_category">Item Category</string>
    <string name="item_category_description">Item Category Description</string>
    <string name="kk_root">+</string>
    <string name="kk_item_category_operation_failed">Item Category Operation Failed</string>
    <string name="kk_businessname_hint">Business Name</string>
    <string name="kk_address_hint">Address</string>
    <string name="kk_not_valid_admin_user">Not a valid admin user</string>
    <string name="business_user_approval_failed">Business User Approval Failed</string>
    <string name="kk_actionable_nothing_to_do">There is nothing to do.</string>
    <string name="kk_set_business_polygon">Set Business Area</string>
    <string name="rb_hello">Hello</string>
    <string name="rb_facebook_integration">Facebook Integration</string>
    <string name="rb_facebook_integration_label">Facebook Integration</string>
    <string name="facebook_app_id">1509759676018221</string>
    <string name="rb_facebook_group_number">Facebook Group Id</string>
    <string name="rc_groups">Groups</string>
    <string name="facebook_group_not_selected">Select Facebook Group</string>
    <string name="facebook_group_not_selected_description">Please select an appropriate facebook group to link with this group.</string>
    <string name="ok">OK</string>
    <string name="rc_force_facebook_login">Force Facebook Login</string>
    <string name="rc_login_to_facebook_message">Please login into your facebook account to enable the application. Click the button below.</string>
    <string name="exiting_facebook_login_not_available">Can\'t continue without facebook. Exiting.</string>
    <string name="rc_add_group">Add</string>
    <string name="rc_group_description">Description</string>
    <string name="adding_group">Adding Group</string>
    <string name="administrator">Administrator</string>
    <string name="member">Member</string>
    <string name="gcmSenderId">772008650875</string>
    <string name="notification_service_running">Background data collecter is running.</string>
    <string name="start_drive">Start</string>
    <string name="stop_drive">Stop</string>
    <string name="rc_vehicle_brand">Vehicle Brand</string>
    <string name="rb_vehicle_registration">Vehicle Registration</string>
    <string name="select_a_vehicle">Select a Vehicle</string>
    <string name="select_a_vehicle_msg">Please select a vehicle</string>
    <string name="go_to_application">App</string>
    <string name="vehicle_stopped_title">Vehicle is stopped.</string>
    <string name="vehicle_stopped_text">Vehicle is stopped during a drive. Please choose the reason.</string>
    <string name="paid">Paid</string>
    <string name="rc_FasTagLane">FasTagLane</string>
    <string name="toll">Toll</string>
    <string name="fuel">Fuel</string>
    <string name="restaurant">Restaurant</string>
    <string name="restroom">Restroom</string>
    <string name="submit">Submit</string>
    <string name="rc_enter_toll">Enter Toll</string>
    <string name="rc_amenity_details">Amenity Details</string>
    <string name="rc_force_stop_notification">Force Stop Notification</string>
    <string name="rc_amenity_name">Name</string>
    <string name="no_ongoing_drive">No Ongoing Drive</string>
    <string name="no_drive_is_going_on">No drive is going on</string>
    <string name="rc_find_family">Find Family</string>
    <string name="ameneties">Amenities</string>
</resources>
