<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:id="@+id/registration_google_user_view"
    android:background="@color/kk_app_background">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/registration_google_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapWords"
            android:textSize="@dimen/kk_registration_popup_text_size"
            android:hint="@string/kk_name_hint"
            android:textColor="@color/kk_app_foreground" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/kk_registration_popup_text_size"
            android:hint="@string/kk_email_hint"
            android:textColor="@color/kk_app_foreground" />

        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:textSize="@dimen/kk_registration_popup_text_size"
            android:hint="@string/kk_mobile_hint"
            android:textColor="@color/kk_app_foreground" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/kk_registration_popup_text_size"
                android:hint="@string/kk_city_hint"
                android:layout_weight="0.5"
                android:inputType="textCapWords"
                android:textColor="@color/kk_app_foreground" />

            <EditText
                android:id="@+id/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/kk_registration_popup_text_size"
                android:hint="@string/kk_state_hint"
                android:layout_weight="0.5"
                android:inputType="textCapWords"
                android:textColor="@color/kk_app_foreground" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="@dimen/kk_registration_popup_text_size"
                android:text="@string/kk_cancel_button"
                android:layout_alignParentLeft="true"
                android:onClick="cancelRegister"
                android:textColor="@color/kk_app_foreground" />

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="@dimen/kk_registration_popup_text_size"
                android:text="@string/kk_register_button"
                android:layout_alignParentRight="true"
                android:onClick="registerUser"
                android:textColor="@color/kk_app_foreground" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>