<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:id="@+id/create_group_view"
    android:background="@drawable/application_background">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/create_group_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/groupname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapWords"
            android:textSize="@dimen/kk_registration_popup_text_size"
            android:hint="@string/kk_name_hint"
            android:textColorHint="@color/kk_app_foreground_hint"
            android:textColor="@color/kk_app_foreground" />

        <EditText
            android:id="@+id/groupdescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="@dimen/kk_registration_popup_text_size"
            android:hint="@string/kk_email_hint"
            android:textColorHint="@color/kk_app_foreground_hint"
            android:textColor="@color/kk_app_foreground" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fb_group_id"
            android:layout_gravity="center_horizontal"
            android:textColorHint="@color/kk_app_foreground_hint"
            android:textColor="@color/kk_app_foreground" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="@dimen/kk_registration_popup_text_size"
                android:text="@string/kk_cancel_button"
                android:layout_alignParentLeft="true"
                android:onClick="cancelRegister"
                android:textColorHint="@color/kk_app_foreground_hint"
                android:textColor="@color/kk_app_foreground" />

            <Button
                android:id="@+id/create_group_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="@dimen/kk_registration_popup_text_size"
                android:text="@string/kk_register_button"
                android:layout_alignParentRight="true"
                android:onClick="createGroup"
                android:textColorHint="@color/kk_app_foreground_hint"
                android:textColor="@color/kk_app_foreground" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>